@@ -1,4 +1,8 @@
-﻿shmuel 10.06.2014 11:38:11 +0200 - build 3951
+﻿w17 16.06.2014 23:43:57 +0400 - build 3952
+
+1. M#2708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"
+
+shmuel 10.06.2014 11:38:11 +0200 - build 3951
 
 1. Уточнение 3949.
 
